# scrapybara-python-template

./: .cursorrules  .env  .env.example  README.md  main.py  pyproject.toml
src/: main.py
