[project]
name = "scrapybara-python-template"
version = "0.1.0"
description = ""
authors = [{ name = "justin", email = "justin@scrapybara.com" },{ name = "nalin", email = "nalin@scrapybara.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "scrapybara>=2.4.0,<3",
    "python-dotenv>=1.0.1,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build-system.wheel]
packages = ["src"]